# cuvarbase

./: CLAUDE.md  INSTALL.rst  README.rst  noxfile.py  publish_docs.sh  pyproject.toml  setup.cfg  setup.py
docs/notes/: .gitignore  scikit-cuda-dependency.tex
docs/source/: conf.py  cuvarbase.rst  lomb.rst
src/cuvarbase/: __init__.py  _cufft.py  bls.py  ce.py  core.py  cunfft.py  gpu.py  lombscargle.py  pdm.py  utils.py
tests/: conftest.py  test_bls.py  test_ce.py  test_gpu.py  test_lombscargle.py  test_nfft.py  test_pdm.py
